--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 /* navigation links */
@@ -56,13 +57,13 @@ h1, h2 {
 /* Hero Image */
 
 #hero-image {
-    height:600px;
+    height: 600px;
     width: 100%;
     background: url('../images/hero-image.webp') no-repeat center center;
 }
 
 #hero-outer{
-    height:600px;
+    height: 600px;
     width: 100%;
     overflow: hidden;
 
@@ -83,4 +84,30 @@ h1, h2 {
     to{
         transform:scale(1.1);
     }
+}
+
+/* Club Ethos */
+
+#club-ethos {
+    height: 600px;
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: blue;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: silver
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    background-color:green;
 }
