--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,8 @@ h1, h2 {
     width: 100%;
     overflow: hidden;
 
+    position: relative;
+
     /* animates zoom effect on the loading page */
     animation-name: hero-zoom;
     animation-duration: 5s;
@@ -79,10 +81,10 @@ h1, h2 {
 
 @keyframes hero-zoom {
     from{
-        transform:scale(1);
+        transform: scale(1);
     }
     to{
-        transform:scale(1.1);
+        transform: scale(1.1);
     }
 }
 
@@ -96,18 +98,46 @@ h1, h2 {
     padding-top: 30px;
     width: 33%;
     float: left;
-    background-color: blue;
 }
 
 #right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: silver
 }
 
 #center-about {
     width: 33%;
     margin: 0 auto;
     background-color:green;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading p {
+    text-align: right;
 }
