--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,6 @@ h1, h2 {
 #center-about {
     width: 33%;
     margin: 0 auto;
-    background-color:green;
 }
 
 hr {
@@ -146,4 +145,23 @@ hr {
 
 #welcome {
     text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url(../images/ethos-center-image.jpg);
+    height: 100%;
+    border-radius: 50%;
 }
